Fixed empty space on narrow displays
it was caused by the frills shadow extending below the body, i cut off overflow to fix

--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@ body, html {
   color: #96a8e9;
 
   margin: 0;
-
+  overflow: hidden;
 
   background-size: cover;
   background-position: center;
